--- a/style.css
+++ b/style.css
@@ -3,24 +3,26 @@
     grid-template-rows: 1fr 4fr auto;
     grid-template-columns: 1fr 3fr 1fr;
     min-height: 100vh;
-    margin: 20px;
+    margin: 10px;
+    border: black 1px solid;
 }
 
 img {
-    max-height: 50px;
-    max-width: 50px;
+    max-height: 60px;
+    max-width: 60px;
 }
 
 .sidebar {
-    border: solid 1px;
     gap: 10px;
     display: grid;
     grid-area: 1 / 1 / 4 / 2;
+    font-size: 25px;
+    padding-left: 10px;
+    background-color: orange;
 }
 
 .topbar {
     display: flex;
-    border: solid red 1px;
     padding-bottom: 20px;
     grid-area: 1 / 2 / 2 / 4;
     align-items: center;
@@ -31,29 +33,56 @@ input {
     height: 15px;
     padding-right: 200px;
     margin-right: 200px;
- 
 }
 
+.buttons {
+   padding-left: 250px;
+   gap: 10px;
+}
 .button {
     border-radius: 10px;
     width: 110px;
     height: 25px;
-
 }
-
 
 .logo {
     padding-left: 10px;
 }
 
 .projects {
-    display: grid;
-    grid-area: 2 / 2 / 4 / 4;
-    border: solid 1px blue;
+    display: flex;
+    grid-area: 2 / 2 / 4 / 3;
+    border: solid 1px rgb(38, 38, 38);
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: space-evenly;
+    background-image: url(funny.jpg);
+    background-size: cover;
+    padding: 20px;
+}
+
+.project{
+    border: 1px solid;
+    font-size: 20px;
+    min-block-size: 300px;
 }
 
 .announcements {
     border: solid 1px green;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     grid-area: 2 / 3 / 4 / 4;
+    padding-left: 10px;
+    justify-content: space-evenly;
+    background-color: rgb(28, 232, 28);
+}
+
+.announcement{
+    border: solid 1px black;
+    min-block-size: 250px;
+}
+
+.logo {
+    font-family: 'Comic Sans MS', cursive;
+    font-size: 20px;
 }
